showing export dialog when clicking that export item, added new menu item to view tabular data

--- a/src/gui/pygubu.ui
+++ b/src/gui/pygubu.ui
@@ -348,6 +348,12 @@
                   </object>
                 </child>
                 <child>
+                  <object class="tk.Menuitem.Command" id="command_viewtab">
+                    <property name="command" cbtype="simple" type="command">on_view_tabular</property>
+                    <property name="label" translatable="yes">View Tabular Data</property>
+                  </object>
+                </child>
+                <child>
                   <object class="tk.Menuitem.Command" id="command_13">
                     <property name="command" type="command" cbtype="simple">on_click_open_externally</property>
                     <property name="label" translatable="yes">Open File Externally</property>
