--- a/src/gui/settings_dialog.ui
+++ b/src/gui/settings_dialog.ui
@@ -161,7 +161,7 @@
         <child>
           <object class="ttk.Labelframe" id="labelframe_8">
             <property name="height">200</property>
-            <property name="text" translatable="yes">GUI Theme</property>
+            <property name="text" translatable="yes">Theme</property>
             <property name="width">200</property>
             <layout manager="pack">
               <property name="ipadx">5</property>
@@ -173,10 +173,46 @@
             <child>
               <object class="ttk.Combobox" id="combobox_theme" named="True">
                 <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_theme_sel" add="" />
-                <layout manager="pack">
-                  <property name="expand">true</property>
-                  <property name="fill">x</property>
-                  <property name="padx">10</property>
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="padx">3</property>
+                  <property name="pady">3</property>
+                  <property name="row">0</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label1">
+                <property name="text" translatable="yes">GUI:</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="padx">3</property>
+                  <property name="pady">3</property>
+                  <property name="row">0</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label2">
+                <property name="text" translatable="yes">Plot:</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="padx">3</property>
+                  <property name="pady">3</property>
+                  <property name="row">1</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Combobox" id="combobox_plotstyle" named="True">
+                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_plotstyle_sel" add="" />
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="padx">3</property>
+                  <property name="pady">3</property>
+                  <property name="row">1</property>
+                  <property name="sticky">w</property>
                 </layout>
               </object>
             </child>
