--- a/src/gui/rl_dialog.ui
+++ b/src/gui/rl_dialog.ui
@@ -217,6 +217,7 @@
                         <property name="variable">string:plot_kind</property>
                         <layout manager="grid">
                           <property name="column">0</property>
+                          <property name="pady">5</property>
                           <property name="row">0</property>
                         </layout>
                       </object>
@@ -228,6 +229,8 @@
                         <property name="variable">string:plot_kind</property>
                         <layout manager="grid">
                           <property name="column">1</property>
+                          <property name="padx">10</property>
+                          <property name="pady">5</property>
                           <property name="row">0</property>
                         </layout>
                       </object>
