--- a/src/gui/tabular_dialog.ui
+++ b/src/gui/tabular_dialog.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<interface version="1.4" author="PygubuDesigner 0.39.3">
+<interface version="1.4" author="PygubuDesigner 0.40.2">
   <project>
     <settings>
       <setting id="name">tabular_dialog</setting>
@@ -56,13 +56,68 @@
               </object>
             </child>
             <child>
-              <object class="ttk.Combobox" id="combobox_format" named="True">
-                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_change_format" add="" />
+              <object class="ttk.Frame" id="frame3">
+                <property name="height">200</property>
+                <property name="width">200</property>
                 <layout manager="pack">
-                  <property name="padx">5</property>
-                  <property name="pady">5</property>
+                  <property name="expand">true</property>
+                  <property name="fill">x</property>
                   <property name="side">left</property>
                 </layout>
+                <child>
+                  <object class="ttk.Combobox" id="combobox_format" named="True">
+                    <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_change_format" add="" />
+                    <layout manager="pack">
+                      <property name="padx">5</property>
+                      <property name="pady">5</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="ttk.Label" id="label1">
+                    <property name="text" translatable="yes">X</property>
+                    <layout manager="pack">
+                      <property name="padx">5</property>
+                      <property name="pady">5</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="ttk.Entry" id="entry_x" named="True">
+                    <property name="textvariable">string:filter_x</property>
+                    <layout manager="pack">
+                      <property name="expand">True</property>
+                      <property name="fill">x</property>
+                      <property name="padx">5</property>
+                      <property name="pady">5</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="ttk.Label" id="label2">
+                    <property name="text" translatable="yes">Cols</property>
+                    <layout manager="pack">
+                      <property name="padx">5</property>
+                      <property name="pady">5</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="ttk.Entry" id="entry_cols" named="True">
+                    <property name="textvariable">string:filter_cols</property>
+                    <layout manager="pack">
+                      <property name="expand">true</property>
+                      <property name="fill">x</property>
+                      <property name="padx">5</property>
+                      <property name="pady">5</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
@@ -150,6 +205,16 @@
                     <property name="command" type="command" cbtype="simple">on_copy_numpy</property>
                     <property name="hidemargin">false</property>
                     <property name="label" translatable="yes">Copy Numpy</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="tk.Menuitem.Separator" id="separator1" />
+                </child>
+                <child>
+                  <object class="tk.Menuitem.Command" id="command3">
+                    <property name="accelerator">Esc</property>
+                    <property name="command" type="command" cbtype="simple">on_clear_filter</property>
+                    <property name="label" translatable="yes">Reset Filters</property>
                   </object>
                 </child>
               </object>
