better handling of ranges, including in RL dialog

--- a/src/gui/rl_dialog.ui
+++ b/src/gui/rl_dialog.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<interface version="1.4" author="PygubuDesigner 0.39.3">
+<interface version="1.4" author="PygubuDesigner 0.40.2">
   <project>
     <settings>
       <setting id="name">rl_dialog</setting>
@@ -84,84 +84,48 @@
           <object class="ttk.Labelframe" id="labelframe_2">
             <property name="height">200</property>
             <property name="padding">5</property>
-            <property name="text" translatable="yes">Integration Range</property>
+            <property name="text" translatable="yes">Frequency Range</property>
             <property name="width">200</property>
             <layout manager="pack">
               <property name="fill">x</property>
               <property name="side">top</property>
             </layout>
+            <child>
+              <object class="ttk.Label" id="label2">
+                <property name="text" translatable="yes">Integration:</property>
+                <layout manager="pack">
+                  <property name="padx">5</property>
+                  <property name="pady">5</property>
+                  <property name="side">left</property>
+                </layout>
+              </object>
+            </child>
             <child>
               <object class="ttk.Entry" id="entry_1">
-                <property name="textvariable">string:int0</property>
+                <property name="textvariable">string:int_range</property>
                 <layout manager="pack">
+                  <property name="padx">5</property>
+                  <property name="pady">5</property>
                   <property name="side">left</property>
                 </layout>
               </object>
             </child>
             <child>
-              <object class="ttk.Label" id="label_1">
-                <property name="text" translatable="yes">to</property>
+              <object class="ttk.Label" id="label1">
+                <property name="text" translatable="yes">Target:</property>
                 <layout manager="pack">
+                  <property name="padx">5</property>
+                  <property name="pady">5</property>
                   <property name="side">left</property>
                 </layout>
               </object>
             </child>
             <child>
-              <object class="ttk.Entry" id="entry_2">
-                <property name="textvariable">string:int1</property>
+              <object class="ttk.Entry" id="entry1">
+                <property name="textvariable">string:target_range</property>
                 <layout manager="pack">
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Label" id="label_2">
-                <property name="text" translatable="yes">GHz</property>
-                <layout manager="pack">
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="ttk.Labelframe" id="labelframe_3">
-            <property name="height">200</property>
-            <property name="padding">5</property>
-            <property name="text" translatable="yes">Target Range</property>
-            <property name="width">200</property>
-            <layout manager="pack">
-              <property name="fill">x</property>
-              <property name="side">top</property>
-            </layout>
-            <child>
-              <object class="ttk.Entry" id="entry_3">
-                <property name="textvariable">string:tgt0</property>
-                <layout manager="pack">
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Label" id="label_3">
-                <property name="text" translatable="yes">to</property>
-                <layout manager="pack">
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Entry" id="entry_4">
-                <property name="textvariable">string:tgt1</property>
-                <layout manager="pack">
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Label" id="label_4">
-                <property name="text" translatable="yes">GHz</property>
-                <layout manager="pack">
+                  <property name="padx">5</property>
+                  <property name="pady">5</property>
                   <property name="side">left</property>
                 </layout>
               </object>
@@ -203,6 +167,17 @@
                   </object>
                 </child>
                 <child>
+                  <object class="ttk.Frame" id="frame_rlplot">
+                    <property name="height">400</property>
+                    <property name="width">600</property>
+                    <layout manager="pack">
+                      <property name="expand">true</property>
+                      <property name="fill">both</property>
+                      <property name="side">top</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
                   <object class="ttk.Frame" id="frame2">
                     <property name="height">200</property>
                     <property name="width">200</property>
@@ -235,28 +210,6 @@
                         </layout>
                       </object>
                     </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="ttk.Frame" id="frame_rlplot">
-                    <property name="height">400</property>
-                    <property name="width">600</property>
-                    <layout manager="pack">
-                      <property name="expand">true</property>
-                      <property name="fill">both</property>
-                      <property name="side">top</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="ttk.Entry" id="entry_5">
-                    <property name="state">readonly</property>
-                    <property name="textvariable">string:err_msg</property>
-                    <layout manager="pack">
-                      <property name="expand">false</property>
-                      <property name="fill">x</property>
-                      <property name="side">top</property>
-                    </layout>
                   </object>
                 </child>
               </object>
